Updated display info on all products and single product page; fixed overlapping css issue

--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@ img {
 .product-container {
   flex: 0 20%;
   height: 100px;
-  margin-bottom: 15%;
+  margin-bottom: 200px;
   padding: 10px;
   justify-content: space-around;
   margin-top: 2%;
